@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/z3
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Mar 2015; Justin Lecher <jlec@gentoo.org> z3-4.3.1.ebuild, z3-9999.ebuild:
+  sci-mathematics/z3: Correct license to MIT, thanks Daniel GOUJOT
 
   06 Mar 2014; Justin Lecher <jlec@gentoo.org> z3-9999.ebuild:
   Adopt to recent changes in git-r3.eclass
@@ -13,4 +16,3 @@
   Make build verbose; respect CXX, CXXFLAGS, LDFLAGS; use EPYTHON instead of a
   direct python call; check for openmp compatibility of the c++ compiler; add
   USE=gmp; drop unnecessary eclass; add missing metadata.xml
-
